# pydantic_bigquery

./: .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CHANGES.md  Makefile  README.md  mypy.ini  pyproject.toml
pydantic_bigquery/: __init__.py  constants.py  exceptions.py  model.py  repository.py
tests/: test_model.py  test_repository.py
til_bigquery/: __init__.py  constants.py  exceptions.py  model.py  repository.py
